--- a/src/components/Paragraph/Paragraph.css
+++ b/src/components/Paragraph/Paragraph.css
@@ -1,4 +1,8 @@
 p{
-    color:aqua;
-    font-family: sans-serif;
+    color:white;
+    font-family: 'Poppins', sans-serif;
+    /* margin-top: 20px; */
+    padding: 10px;
+    font-size: 20px;
+
 }
